--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <title>DBZ Match Builder</title>
+       <title>SZ Match Builder</title>
      </head>
      <body>
        <div id="root"></div>
